Set up rating cell

--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -5561,6 +5561,9 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uu4-HH-vbA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="135" height="41"/>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
@@ -5568,7 +5571,11 @@
                                                 <constraint firstAttribute="trailing" secondItem="Tkw-uE-s1H" secondAttribute="trailing" constant="8" id="49n-S8-nGO"/>
                                                 <constraint firstItem="Tkw-uE-s1H" firstAttribute="centerY" secondItem="twC-rl-RyL" secondAttribute="centerY" id="S44-yq-flb"/>
                                                 <constraint firstItem="Tkw-uE-s1H" firstAttribute="leading" secondItem="twC-rl-RyL" secondAttribute="leading" constant="8" id="TDM-f5-ilQ"/>
+                                                <constraint firstItem="Uu4-HH-vbA" firstAttribute="leading" secondItem="twC-rl-RyL" secondAttribute="leading" id="e6S-Rk-TrF"/>
+                                                <constraint firstItem="Uu4-HH-vbA" firstAttribute="top" secondItem="twC-rl-RyL" secondAttribute="top" id="ebm-C7-Nbu"/>
+                                                <constraint firstAttribute="bottom" secondItem="Uu4-HH-vbA" secondAttribute="bottom" id="hpc-zu-fT8"/>
                                                 <constraint firstItem="Tkw-uE-s1H" firstAttribute="centerX" secondItem="twC-rl-RyL" secondAttribute="centerX" id="oAy-cp-GuB"/>
+                                                <constraint firstAttribute="trailing" secondItem="Uu4-HH-vbA" secondAttribute="trailing" id="viW-h4-MWo"/>
                                                 <constraint firstItem="Tkw-uE-s1H" firstAttribute="top" secondItem="twC-rl-RyL" secondAttribute="top" constant="4" id="w4v-Mw-gED"/>
                                                 <constraint firstAttribute="bottom" secondItem="Tkw-uE-s1H" secondAttribute="bottom" constant="4" id="zSz-RO-f1t"/>
                                             </constraints>
